Added hero section to homepage

--- a/html/index.html
+++ b/html/index.html
@@ -28,5 +28,38 @@
             <button class="mobile-menu-btn">☰</button>
         </nav>
     </header>
+    
+    <!--Hero Section-->
+    <section id="home" class="hero">
+        <div class="hero-content">
+            <div class="hero-text fade-in-up">
+                <h1>Hi, I'm Bhawana Ghimire</h1>
+                <h2><span>Full Stack</span> DEVELOPER</h2>
+                <p>I'm passionate about creating user-centric, intellihent digital solutions using modern web and AI technologies. With a cruious mind and continuous learning attitude, I aim to build systems that not only function but think and evolve.</p>
+                <div class="hero-buttons">
+                    <a href="#project" class="btn primary">PROJECTS <i class="fas fa-code"></i></a>
+                    <a href="mailto:bhawanaghimire2080@gmail.com" class="btnoutline">HIRE ME <i class="fas fa-arrow-up=right-form-square"></i></a>
+
+                </div>
+
+            <di class="Social-icons">
+                 <a href="https://github.com/bhawana000111" target="_blank"><i class="fab fa-github"></i></a>
+                    <a href="mailto:bhawanaghimire2080@gmail.com"><i class="fas fa-envelope"></i></a>
+                    <a href="#"><i class="fab fa-linkedin"></i></a>
+                </div>
+            </div>
+            <div class="hero-image">
+                <div class="profile-card fade-in-up">
+                    <div class="profile-image">
+                        <img src="/public/images/bhawana-profile.jpg" alt="Bhawana Ghimire">
+                    </div>
+                    <h3>Bhawana Ghimire</h3>
+                    <p>Full Stack Developer</p>
+                    <p>AI Enthusiast</p>
+                    <p>BSc Computing Student</p>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
