Added about section

--- a/html/index.html
+++ b/html/index.html
@@ -61,5 +61,41 @@
             </div>
         </div>
     </section>
+
+    <!--About Section-->
+    <section id="about" class="Section">
+        <div class="container">
+            <div class="section-header">
+                <h2 class="section-title animate-on-scroll">About</h2>
+                <p>Passionate about building intelligent, user-centric solutions</p>
+            </div>
+            <div class="about-content">
+                <div class="about-image animate-on-scroll">
+                    <div>
+                        <img src="/public/image/bhawana-profile.jpg" alt="Bhawana Ghimire">
+                    </div>    
+                </div>
+                <div class="about-text animate-on-scroll">
+                    <h3>Aspiring Full Stack Developer & AI Enthusiast</h3>
+                    <p>Aspiring to become a skilled Full Stack Developer with a deep interest in Artificial Intelligence, I am passionate about building intelligent, user-centric solutions that combine the power of modern web development and AI technologies.</p>
+                    <p>With a curious mind, continuous learning attitude, and a desire to solve real-world problems, I aim to contribute to the tech world by creating systems that not only function but think and evolve. Currently pursuing BSc (Hons) Computing at London Metropolitan University through Itahari International College.</p>
+                    <div class="stats">
+                        <div class="stat-item">
+                            <span class="stat-number">3+</span>
+                            <span class="stat-label">Projects Completed</span>
+                        </div>
+                        <div class="stat-item">
+                            <span class="stat-number">2+</span>
+                            <span class="stat-label">Years Learning</span>
+                        </div>
+                        <div class="stat-item">
+                            <span class="stat-number">5+</span>
+                            <span class="stat-label">Technologies</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
