--- a/html/index.html
+++ b/html/index.html
@@ -97,5 +97,66 @@
             </div>
         </div>
     </section>
+
+    <!--Skills Section-->
+    <section id="skills" class="section">
+        <div class="container">
+            <div class="section-header">
+                <h2 class="section-title animate-on-scroll">Skilsss & Technologies</h2>
+                <p class="section-subtitle animate-on-scroll"> Technologies I work with to bring ideas to life</p>
+            </div>
+            <div class="skills-grid">
+                <div class="skill-category animate-on-scroll">
+                    <h3><i class="fas fa-code"></i>Web Development</h3>
+                    <div class="skill-list">
+                        <span class="skill-tag">HTML5</span>
+                        <span class="skill-tag">CSS3</span>
+                        <span class="skill-tag">JavaScript</span>
+                        <span class="skill-tag">TypeScript</span>
+                        <span class="skill-tag">React.js</span>
+                        <span class="skill-tag">Next.js</span>
+                        <span class="skill-tag">Django</span>
+                    </div>
+                </div>
+                <div class="skill-category animate-on-scroll">
+                     <h3><i class="fas fa-laptop-code"></i> Programming Languages</h3>
+                    <div class="skill-list">
+                        <span class="skill-tag">Python</span>
+                        <span class="skill-tag">Java</span>
+                        <span class="skill-tag">JavaScript</span>
+                        <span class="skill-tag">TypeScript</span>
+                    </div>
+                </div>
+                <div class="skill-category animate-on-scroll">
+                    <h3><i class="fas fa-brain"></i>AI & Machine Learning</h3>
+                        <div class="skill-list">
+                            <span class="skill-tag">TensorFlow</span>
+                            <span class="skill-tag">Keras</span>
+                            <span class="skill-tag">Scikit-learn</span>
+                            <span class="skill-tag">Data Processing</span>
+                        </div> 
+                </div>
+                <div class="skill-category animate-on-scroll">
+                    <h3><i class="fas fa-brain"></i>Database & tools</h3>
+                        <div class="skill-list">
+                            <span class="skill-tag">Mysql</span>
+                            <span class="skill-tag">github</span>
+                            <span class="skill-tag">Figma</span>
+                            <span class="skill-tag">Canva</span>
+                        </div> 
+                </div>
+                <div class="skill-category animate-on-scroll">
+                    <h3><i class="fas fa-brain"></i>Soft Skills</h3>
+                        <div class="skill-list">
+                            <span class="skill-tag">Problem-Solving</span>
+                            <span class="skill-tag">Communication</span>
+                            <span class="skill-tag">Leadership</span>
+                            <span class="skill-tag">Time management</span>
+                            <span class="skill-tag">Creativity</span>
+                        </div> 
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
