added Project section

--- a/html/index.html
+++ b/html/index.html
@@ -158,5 +158,54 @@
             </div>
         </div>
     </section>
+
+    <!-- Projects Section -->
+    <section id="projects" class="section">
+        <div class="container">
+            <div class="section-header">
+                <h2 class="section-title animate-on-scroll">Featured Projects</h2>
+                <p class="section-subtitle animate-on-scroll">A showcase of my recent work and achievements</p>
+            </div>
+            <div class="projects-grid">
+                <div class="project-card animate-on-scroll">
+                    <div class="project-image">
+                        <i class="fas fa-heartbeat" style="font-size: 3rem;"></i>
+                    </div>
+                    <div class="project-content">
+                        <h3 class="project-title">HealthMate – Symptom Checker</h3>
+                        <p class="project-description">A web-based platform designed to help users check symptoms and receive basic health guidance. Built with modern web technologies to make healthcare information more accessible through a simple and user-friendly interface.</p>
+                        <div class="project-tech">
+                            <span class="tech-tag">Next.js</span>
+                            <span class="tech-tag">React</span>
+                            <span class="tech-tag">JavaScript</span>
+                            <span class="tech-tag">HTML/CSS</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="https://github.com/bhawana000111/Healthmate_symptoms_Checking_Websites.git" target="_blank" class="project-link">GitHub →</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="project-card animate-on-scroll">
+                    <div class="project-image">
+                        <i class="fas fa-hotel" style="font-size: 3rem;"></i>
+                    </div>
+                    <div class="project-content">
+                        <h3 class="project-title">Hotel Management System</h3>
+                        <p class="project-description">A comprehensive hotel management system with secure login, efficient data handling, and user-friendly interface. Leading a team to build this system focused on streamlining hotel operations and improving user experience.</p>
+                        <div class="project-tech">
+                            <span class="tech-tag">Java</span>
+                            <span class="tech-tag">MySQL</span>
+                            <span class="tech-tag">HTML</span>
+                            <span class="tech-tag">CSS</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="https://github.com/bhawana000111/Luxury_Hotel_Management_System.git" target="_blank" class="project-link">GitHub →</a>
+                        </div>
+                    </div>
+                </div>     
+            </div>
+        </div>
+    </section>
+   
 </body>
 </html>
