add Education & Certifications

--- a/html/index.html
+++ b/html/index.html
@@ -6,6 +6,7 @@
     <title>Bhawana Ghimire | Full Stack Developer & AI Enthusiast</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+     <link rel="stylesheet" href="/CSS/Style.css">
 </head>
 <body>
     <!--Header-->
@@ -203,6 +204,56 @@
                         </div>
                     </div>
                 </div>     
+            </div>
+        </div>
+    </section>
+     <!-- Education & Certifications Section -->
+    <section id="education" class="section">
+        <div class="container">
+            <div class="section-header">
+                <h2 class="section-title animate-on-scroll">Education & Certifications</h2>
+                <p class="section-subtitle animate-on-scroll">My academic journey and professional certifications</p>
+            </div>
+            
+            <h3 style="margin-bottom: 2rem; color: var(--primary-color); font-size: 1.5rem;">Education</h3>
+            <div class="education-grid">
+                <div class="education-card animate-on-scroll">
+                    <h3>BSc (Hons) Computing</h3>
+                    <p class="institution">Itahari International College<br>London Metropolitan University</p>
+                    <p class="year">2023 – Present</p>
+                </div>
+                <div class="education-card animate-on-scroll">
+                    <h3>+2 (Science)</h3>
+                    <p class="institution">Kantipur Secondary School<br>Biratnagar, Morang</p>
+                    <p class="year">2019 – 2020</p>
+                </div>
+                <div class="education-card animate-on-scroll">
+                    <h3>SEE</h3>
+                    <p class="institution">Multiple Creative Academy<br>Inaruwa-5, Sunsari</p>
+                    <p class="year">2018</p>
+                </div>
+            </div>
+
+            <h3 style="margin: 3rem 0 2rem 0; color: var(--primary-color); font-size: 1.5rem;">Certifications & Achievements</h3>
+            <div class="animate-on-scroll">
+                <ul class="cert-list">
+                    <li class="cert-item">
+                        <span>Full Stack Development 101</span>
+                        <a href="https://drive.google.com/file/d/1dgv2EefvijHK2FtmJksi4KV2ZS_lOGKM/view?usp=sharing" target="_blank" class="view-link">View</a>
+                    </li>
+                    <li class="cert-item">
+                        <span>Python Django 101</span>
+                        <a href="https://drive.google.com/file/d/1IhwqtF5CbJnfqorlqNsg3RNNh-TebXX-/view?usp=sharing" target="_blank" class="view-link">View</a>
+                    </li>
+                    <li class="cert-item">
+                        <span>AWS Certificate</span>
+                        <a href="https://drive.google.com/drive/folders/1hY-XAJDkajRRbf-DoZzat37u0EXXHLdZ?usp=sharing" target="_blank" class="view-link">View</a>
+                    </li>
+                    <li class="cert-item">
+                        <span>STAR (Student Academic Representative) - Leadership & Teamwork Recognition</span>
+                        <span style="color: var(--primary-color); font-weight: 600;">Achievement</span>
+                    </li>
+                </ul>
             </div>
         </div>
     </section>
