add footer section

--- a/html/index.html
+++ b/html/index.html
@@ -52,7 +52,7 @@
             <div class="hero-image">
                 <div class="profile-card fade-in-up">
                     <div class="profile-image">
-                        <img src="/public/images/bhawana-profile.jpg" alt="Bhawana Ghimire">
+                        <img src="/public/image/bhawana-profile_1.jpg" alt="Bhawana Ghimire">
                     </div>
                     <h3>Bhawana Ghimire</h3>
                     <p>Full Stack Developer</p>
@@ -73,7 +73,7 @@
             <div class="about-content">
                 <div class="about-image animate-on-scroll">
                     <div>
-                        <img src="/public/image/bhawana-profile.jpg" alt="Bhawana Ghimire">
+                        <img src="" alt="Bhawana Ghimire">
                     </div>    
                 </div>
                 <div class="about-text animate-on-scroll">
