added footer and style CSS

--- a/html/index.html
+++ b/html/index.html
@@ -24,7 +24,7 @@
             </ul>
              <div class="header-actions">
                 <a href="mailto:bhawanaghimire2080@gmail.com" class="btn-header">Let's Talk</a>
-                <a href="#" class="btn-header" download>Download CV</a>
+                <a href="/public/image/Bhawana Ghimire (2).pdf" class="btn-header" download>Download CV</a>
             </div>
             <button class="mobile-menu-btn">☰</button>
         </nav>
@@ -38,7 +38,7 @@
                 <h2><span>Full Stack</span> DEVELOPER</h2>
                 <p>I'm passionate about creating user-centric, intellihent digital solutions using modern web and AI technologies. With a cruious mind and continuous learning attitude, I aim to build systems that not only function but think and evolve.</p>
                 <div class="hero-buttons">
-                    <a href="#project" class="btn primary">PROJECTS <i class="fas fa-code"></i></a>
+                    <a href="#projects" class="btn primary">PROJECTS <i class="fas fa-code"></i></a>
                     <a href="mailto:bhawanaghimire2080@gmail.com" class="btnoutline">HIRE ME <i class="fas fa-arrow-up=right-form-square"></i></a>
 
                 </div>
@@ -284,7 +284,7 @@
                         </div>
                         <div>
                             <strong>Phone</strong><br>
-                            +977 9702670933
+                            +977 984235677
                         </div>
                     </div>
                     <div class="contact-item">
@@ -328,5 +328,17 @@
             </div>
         </div>
     </section>
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-social">
+                <a href="https://github.com/bhawana000111" target="_blank"><i class="fab fa-github"></i></a>
+                <a href="mailto:bhawanaghimire2080@gmail.com"><i class="fas fa-envelope"></i></a>
+                <a href="#"><i class="fab fa-linkedin"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+            </div>
+            <p class="footer-text">&copy; 2025 Bhawana Ghimire. All Rights Reserved. Built with ❤️ and lots of ☕</p>
+        </div>
+    </footer>
 </body>
 </html>
