--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Bhawana Ghimire | Full Stack Developer & AI Enthusiast</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-     <link rel="stylesheet" href="/CSS/Style.css">
+     <link rel="stylesheet" href="./CSS/Style.css">
 </head>
 <body>
     <!--Header-->
@@ -24,7 +24,7 @@
             </ul>
              <div class="header-actions">
                 <a href="mailto:bhawanaghimire2080@gmail.com" class="btn-header">Let's Talk</a>
-                <a href="/public/image/Bhawana Ghimire (2).pdf" class="btn-header" download>Download CV</a>
+                <a href="./public/image/Bhawana Ghimire (2).pdf" class="btn-header" download>Download CV</a>
             </div>
             <button class="mobile-menu-btn">☰</button>
         </nav>
@@ -46,13 +46,13 @@
             <di class="Social-icons">
                  <a href="https://github.com/bhawana000111" target="_blank"><i class="fab fa-github"></i></a>
                     <a href="mailto:bhawanaghimire2080@gmail.com"><i class="fas fa-envelope"></i></a>
-                    <a href="#"><i class="fab fa-linkedin"></i></a>
+                    <a href=""><i class="fab fa-linkedin"></i></a>
                 </div>
             </div>
             <div class="hero-image">
                 <div class="profile-card fade-in-up">
                     <div class="profile-image">
-                        <img src="/public/image/bhawana-profile_1.jpg" alt="Bhawana Ghimire">
+                        <img src="./public/image/bhawana-profile_1.jpg" alt="Bhawana Ghimire">
                     </div>
                     <h3>Bhawana Ghimire</h3>
                     <p>Full Stack Developer</p>
@@ -173,7 +173,7 @@
                         <i class="fas fa-heartbeat" style="font-size: 3rem;"></i>
                     </div>
                     <div class="project-content">
-                        <h3 class="project-title">HealthMate – Symptom Checker</h3>
+                        <h3 class="project-title">HealthMate Symptom Checker</h3>
                         <p class="project-description">A web-based platform designed to help users check symptoms and receive basic health guidance. Built with modern web technologies to make healthcare information more accessible through a simple and user-friendly interface.</p>
                         <div class="project-tech">
                             <span class="tech-tag">Next.js</span>
@@ -340,5 +340,88 @@
             <p class="footer-text">&copy; 2025 Bhawana Ghimire. All Rights Reserved. Built with ❤️ and lots of ☕</p>
         </div>
     </footer>
+    <script>
+        // Smooth scrolling for navigation links
+        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+            anchor.addEventListener('click', function (e) {
+                e.preventDefault();
+                const target = document.querySelector(this.getAttribute('href'));
+                if (target) {
+                    target.scrollIntoView({
+                        behavior: 'smooth',
+                        block: 'start'
+                    });
+                }
+            });
+        });
+
+        // Header background on scroll
+        window.addEventListener('scroll', () => {
+            const header = document.querySelector('.header');
+            if (window.scrollY > 100) {
+                header.style.background = 'rgba(255, 255, 255, 0.98)';
+                header.style.boxShadow = '0 2px 20px rgba(0, 0, 0, 0.1)';
+            } else {
+                header.style.background = 'rgba(255, 255, 255, 0.95)';
+                header.style.boxShadow = 'none';
+            }
+        });
+
+        // Animate elements on scroll
+        const observerOptions = {
+            threshold: 0.1,
+            rootMargin: '0px 0px -50px 0px'
+        };
+
+        const observer = new IntersectionObserver((entries) => {
+            entries.forEach(entry => {
+                if (entry.isIntersecting) {
+                    entry.target.classList.add('animated');
+                }
+            });
+        }, observerOptions);
+
+        document.querySelectorAll('.animate-on-scroll').forEach(el => {
+            observer.observe(el);
+        });
+
+        // Form submission
+        document.querySelector('.contact-form').addEventListener('submit', function(e) {
+            e.preventDefault();
+            alert('Thank you for your message! I\'ll get back to you soon.');
+            this.reset();
+        });
+
+        // Mobile menu toggle
+        document.querySelector('.mobile-menu-btn').addEventListener('click', function() {
+            const navLinks = document.querySelector('.nav-links');
+            const headerActions = document.querySelector('.header-actions');
+            
+            if (navLinks.style.display === 'flex') {
+                navLinks.style.display = 'none';
+                headerActions.style.display = 'none';
+            } else {
+                navLinks.style.display = 'flex';
+                navLinks.style.flexDirection = 'column';
+                navLinks.style.position = 'absolute';
+                navLinks.style.top = '100%';
+                navLinks.style.left = '0';
+                navLinks.style.right = '0';
+                navLinks.style.background = 'white';
+                navLinks.style.padding = '1rem';
+                navLinks.style.boxShadow = '0 2px 10px rgba(0,0,0,0.1)';
+                
+                headerActions.style.display = 'flex';
+                headerActions.style.flexDirection = 'column';
+                headerActions.style.position = 'absolute';
+                headerActions.style.top = '200%';
+                headerActions.style.left = '0';
+                headerActions.style.right = '0';
+                headerActions.style.background = 'white';
+                headerActions.style.padding = '1rem';
+                headerActions.style.gap = '0.5rem';
+            }
+        });
+    </script>
 </body>
 </html>
