Header section, Hero section Edited

--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
      <link rel="stylesheet" href="./CSS/Style.css">
 </head>
 <body>
-    <!--Header-->
+ <!-- Header -->
     <header class="header">
-        <!--Navigation-->
         <nav class="nav">
-            <a href="#home" class="logo">Bhawana<span>.</span></a>
+            <a href="#home" class="logo">BHAWANA<span>.</span></a>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
@@ -22,31 +21,29 @@
                 <li><a href="#education">Education</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
-             <div class="header-actions">
+            <div class="header-actions">
                 <a href="mailto:bhawanaghimire2080@gmail.com" class="btn-header">Let's Talk</a>
-                <a href="./public/image/Bhawana Ghimire (2).pdf" class="btn-header" download>Download CV</a>
+                <a href="#" class="btn-header" download>Download CV</a>
             </div>
             <button class="mobile-menu-btn">☰</button>
         </nav>
     </header>
     
-    <!--Hero Section-->
+    <!-- Hero Section -->
     <section id="home" class="hero">
         <div class="hero-content">
             <div class="hero-text fade-in-up">
                 <h1>Hi, I'm Bhawana Ghimire</h1>
-                <h2><span>Full Stack</span> DEVELOPER</h2>
-                <p>I'm passionate about creating user-centric, intellihent digital solutions using modern web and AI technologies. With a cruious mind and continuous learning attitude, I aim to build systems that not only function but think and evolve.</p>
+                <h2><span>FULL STACK</span> DEVELOPER</h2>
+                <p>I'm passionate about creating user-centric, intelligent digital solutions using modern web and AI technologies. With a curious mind and continuous learning attitude, I aim to build systems that not only function but think and evolve.</p>
                 <div class="hero-buttons">
                     <a href="#projects" class="btn primary">PROJECTS <i class="fas fa-code"></i></a>
-                    <a href="mailto:bhawanaghimire2080@gmail.com" class="btnoutline">HIRE ME <i class="fas fa-arrow-up=right-form-square"></i></a>
-
+                    <a href="mailto:bhawanaghimire2080@gmail.com" class="btn outline">HIRE ME <i class="fas fa-arrow-up-right-from-square"></i></a>
                 </div>
-
-            <di class="Social-icons">
-                 <a href="https://github.com/bhawana000111" target="_blank"><i class="fab fa-github"></i></a>
+                <div class="social-icons">
+                    <a href="https://github.com/bhawana000111" target="_blank"><i class="fab fa-github"></i></a>
                     <a href="mailto:bhawanaghimire2080@gmail.com"><i class="fas fa-envelope"></i></a>
-                    <a href=""><i class="fab fa-linkedin"></i></a>
+                    <a href="#"><i class="fab fa-linkedin"></i></a>
                 </div>
             </div>
             <div class="hero-image">
